crates/php-parser/tests/snapshots/integration__invalid_unclosed_try.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php
try {
    foo();

catch (Exception $e) {
    bar();
}
=== errors ===
expected expression
expected catch or finally clause, found end of file
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "TryCatch": {
          "body": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "FunctionCall": {
                      "name": {
                        "kind": {
                          "Identifier": "foo"
                        },
                        "span": {
                          "start": 16,
                          "end": 19
                        }
                      },
                      "args": []
                    }
                  },
                  "span": {
                    "start": 16,
                    "end": 21
                  }
                }
              },
              "span": {
                "start": 16,
                "end": 24
              }
            },
            {
              "kind": "Error",
              "span": {
                "start": 24,
                "end": 58
              }
            }
          ],
          "catches": [],
          "finally": null
        }
      },
      "span": {
        "start": 6,
        "end": 59
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 59
  }
}
