crates/php-parser/tests/snapshots/integration__isset_empty.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php isset($a, $b); empty($x);
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Isset": [
              {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 12,
                  "end": 14
                }
              },
              {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 16,
                  "end": 18
                }
              }
            ]
          },
          "span": {
            "start": 6,
            "end": 19
          }
        }
      },
      "span": {
        "start": 6,
        "end": 21
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Empty": {
              "kind": {
                "Variable": "x"
              },
              "span": {
                "start": 27,
                "end": 29
              }
            }
          },
          "span": {
            "start": 21,
            "end": 30
          }
        }
      },
      "span": {
        "start": 21,
        "end": 31
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 31
  }
}
