crates/php-parser/tests/snapshots/integration__keyword_as_enum_case.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php enum Suit { case for; case function; case match; }
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Enum": {
          "name": "Suit",
          "scalar_type": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Case": {
                  "name": "for",
                  "value": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 18,
                "end": 28
              }
            },
            {
              "kind": {
                "Case": {
                  "name": "function",
                  "value": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 28,
                "end": 43
              }
            },
            {
              "kind": {
                "Case": {
                  "name": "match",
                  "value": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 43,
                "end": 55
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 56
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 56
  }
}
