crates/php-parser/tests/snapshots/integration__keyword_as_function_name.snap
---
source: crates/php-parser/tests/integration.rs
expression: out
---
=== function readonly ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "readonly",
          "params": [],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 28
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 28
  }
}
=== function exit ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "exit",
          "params": [
            {
              "name": "status",
              "type_hint": {
                "kind": {
                  "Union": [
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "string"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 20,
                            "end": 26
                          }
                        }
                      },
                      "span": {
                        "start": 20,
                        "end": 26
                      }
                    },
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "int"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 27,
                            "end": 30
                          }
                        }
                      },
                      "span": {
                        "start": 27,
                        "end": 30
                      }
                    }
                  ]
                },
                "span": {
                  "start": 20,
                  "end": 30
                }
              },
              "default": {
                "kind": {
                  "Int": 0
                },
                "span": {
                  "start": 41,
                  "end": 42
                }
              },
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 20,
                "end": 42
              }
            }
          ],
          "body": [],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "never"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 45,
                  "end": 50
                }
              }
            },
            "span": {
              "start": 45,
              "end": 50
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 53
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 53
  }
}
=== function die ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "die",
          "params": [
            {
              "name": "status",
              "type_hint": {
                "kind": {
                  "Union": [
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "string"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 19,
                            "end": 25
                          }
                        }
                      },
                      "span": {
                        "start": 19,
                        "end": 25
                      }
                    },
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "int"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 26,
                            "end": 29
                          }
                        }
                      },
                      "span": {
                        "start": 26,
                        "end": 29
                      }
                    }
                  ]
                },
                "span": {
                  "start": 19,
                  "end": 29
                }
              },
              "default": {
                "kind": {
                  "Int": 0
                },
                "span": {
                  "start": 40,
                  "end": 41
                }
              },
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 19,
                "end": 41
              }
            }
          ],
          "body": [],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "never"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 44,
                  "end": 49
                }
              }
            },
            "span": {
              "start": 44,
              "end": 49
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 52
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 52
  }
}
=== function clone ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "clone",
          "params": [
            {
              "name": "object",
              "type_hint": {
                "kind": {
                  "Named": {
                    "parts": [
                      "object"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 21,
                      "end": 27
                    }
                  }
                },
                "span": {
                  "start": 21,
                  "end": 27
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 21,
                "end": 35
              }
            }
          ],
          "body": [],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "object"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 38,
                  "end": 44
                }
              }
            },
            "span": {
              "start": 38,
              "end": 44
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 47
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 47
  }
}
=== function match ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "match",
          "params": [],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 25
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 25
  }
}
=== function fn ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "fn",
          "params": [],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 22
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 22
  }
}
